 * Adding SHA256 fingerprint to certificate-status for renewed certificate.

v2.0.1
----------------------------------------------------------------------------------------------------
 * New handler "md-status" that can be configured to return the state of all MDs in JSON format.
 * Append the name or domain of an MD to the "md-status" url path and get the JSON of just
   that MD.

v2.0.0
----------------------------------------------------------------------------------------------------
 * Updating the documentation by pulling the wiki into README.md and making the necessary
   additions and edits.
 * If a MDomain is removed, all its challenge store information is purged as well. Test
   case for that added. Fixes #93
 * The ACMEv2 endpoint of Let's Encrypt is now the default for new MDs. Existing MDs will keep
   their values unless one explicitly configures a 'MDCertificateAuthority'. 
 * Non-HTML format of mod_status now lists number of ok/renew/error/ready MDomains.

v1.99.12
----------------------------------------------------------------------------------------------------
 * Status lists private key specification, if different from default RSA(2048).
 * Status shows list of MDs sorted alphabetically.
 * Status now shows message from a failed renewal with information and error code on where/why
   it failed.
 * At startup, an initial ACME parameter check is performed. More details are given when
   ACME challenge methods are unavailable as to the cause. server-status list these per MD.
 * Adding challenge type 'tls-alpn-01' to ACMEv1 as well.
 * server-status columns compressed. Expiry/Valid timestamp given as dates only for better
   readability. Full time as tooltip.
 * Renewal jobs properties are persisted after each run. This preserves status and schedules
   when switching child processes by mod_watchdog. It also allows server-status to provide
   more information about ongoing activities.